<?php
namespace app\frontend\modules\goods\model;
use app\common\ServiceModel\ServiceModel;

class GoodsModel extends ServiceModel
{


}