@startuml
class GoodsModel{
    -_initial_data
    -_data
    -total
    +getInitialData()
    -_decorateData()
    +getDiscountPrice()
}
class OrderModel{
    #source
    #order_model
    #total
    #_goods_group_model
    +__construct()
    +addGoodsGroup()
    +getData()
    +getGoodsGroup()
    +calculateStatistics()
}
class GoodsGroupModel{
    #_goods_models
    +addGoods
    +getTotal
    +getDispatchPrice
    +getDiscountPrice
    +getMarketPrice
    +getFinalPrice
}
OrderModel --> GoodsGroupModel
GoodsGroupModel --* GoodsModel
@enduml